Fix homepage alignment

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 @layer components {
   .custom-container {
-    @apply max-w-[1000px] h-screen mx-auto text-center flex flex-col justify-center items-center;
+    @apply max-w-[1000px] h-screen mx-auto text-center flex flex-col justify-center items-center relative bottom-20;
   }
 
   .nav-button {
